# myagent

./: .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  README.md  screen_off.py
configs/: .gitignore  README.md  sync.sh
configs/claude-code/: .env.example  settings.json
configs/codex/: .env.example  bash_aliases.full-auto.sh  config.toml
docs/: graphify-pilot.md  opencli-install.md  skill-migration-plan.md  skill-migration-status.md
docs/agent-memory/: README.md  codex-operating-memory.md  decisions.md  open-loops.md
scripts/: 1.py  CheckTask.py  CreateTaskWithSchtasks.py  TestTask.py  _windows_helpers.py  codex-chrome配置.py  codex-launcher.py  codex_heartbeat.py  fileCopyUpMain.py  fix-md-notepadpp.py  install-global-script-hub.py  restart-cc-connect-hidden.py  start-cc-connect-hidden.py  temp_check.txt  文件复制上传.py  每日数据统计.py  清理导航栏残留.py  清理导航栏残留_使用说明.md
scripts/CodeX-Config/: config.20260413-193719.toml
scripts/Test/: task-action.py  定时任务Test.py  定时任务测试样本.py
scripts/chrome-devtool-mcp/: codex-chrome-mcp.py  start-chrome-mcp-fixed-profile.py
skills/: README.md
skills/claude-to-im/: .skill-source.json  README.md  README_CN.md  SKILL.md  config.env.example
skills/skills-local/daily-report-table/: .skill-source.json  README.md  SKILL.md  pyproject.toml
skills/skills-local/daily-report-table/agents/: openai.yaml
skills/skills-local/daily-report-table/scripts/: fill_work_hours_form.py  report_table.py  work_hours_sheet.py
skills/skills-local/daily-report-table/tests/: test_report_table.py  test_work_hours_sheet.py
skills/wx-cli/: CLAUDE.md  (+1 more)
(+225 files in other folders)
